# ComfyUI-GGUF-FantasyTalking

./: .gitignore  LICENSE  README_OOM_FIX.md  __init__.py  dequant.py  loader.py  nodes.py  ops.py  pyproject.toml  requirements.txt  temp.py
wanvideo/: __init__.py
wanvideo/modules/: __init__.py  model.py
wanvideo/utils/: __init__.py
